improved code-style, added missing JavaDoc, code-cleanup (#198)