@@ -7,7 +7,6 @@ import java.io.InputStreamReader;
 import java.lang.ProcessBuilder.Redirect;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -225,7 +224,7 @@ public final class ProcessContextImpl implements ProcessContext {
   private String findBashOnWindows() {
 
     // Check if Git Bash exists in the default location
-    Path defaultPath = Paths.get("C:\\Program Files\\Git\\bin\\bash.exe");
+    Path defaultPath = Path.of("C:\\Program Files\\Git\\bin\\bash.exe");
     if (Files.exists(defaultPath)) {
       return defaultPath.toString();
     }
