@@ -3,7 +3,6 @@ package com.devonfw.tools.ide.tool;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
@@ -88,34 +87,32 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
   /**
    * Ensures the tool is installed and then runs this tool with the given arguments.
    *
-   * @param isBackgroundProcess {@code true}, the process of the command will be run as background process,
-   *        {@code false} otherwise it will be run as foreground process.
+   * @param runInBackground {@code true}, the process of the command will be run as background process, {@code false}
+   *        otherwise (it will be run as foreground process).
    * @param toolVersion the explicit version (pattern) to run. Typically {@code null} to ensure the configured version
    *        is installed and use that one. Otherwise, the specified version will be installed in the software repository
    *        without touching and IDE installation and used to run.
-   * @param args the commandline arguments to run the tool.
+   * @param args the command-line arguments to run the tool.
    */
-  public void runTool(boolean isBackgroundProcess, VersionIdentifier toolVersion, String... args) {
+  public void runTool(boolean runInBackground, VersionIdentifier toolVersion, String... args) {
 
     Path binaryPath;
-    Path toolPath = Paths.get(getBinaryName());
+    Path toolPath = Path.of(getBinaryName());
     if (toolVersion == null) {
       install(true);
       binaryPath = toolPath;
     } else {
       throw new UnsupportedOperationException("Not yet implemented!");
     }
-    ProcessContext pc = this.context.newProcess().errorHandling(ProcessErrorHandling.WARNING).executable(binaryPath)
-        .addArgs(args);
+    ProcessContext pc = this.context.newProcess().errorHandling(ProcessErrorHandling.WARNING).executable(binaryPath).addArgs(args);
 
-    pc.run(false, isBackgroundProcess);
+    pc.run(false, runInBackground);
   }
 
   /**
-   * See {@link ToolCommandlet#runTool(boolean, VersionIdentifier, String...)} method.
-   * 
-   * @param toolVersion
-   * @param args
+   * @param toolVersion the explicit {@link VersionIdentifier} of the tool to run.
+   * @param args the command-line arguments to run the tool.
+   * @see ToolCommandlet#runTool(boolean, VersionIdentifier, String...)
    */
   public void runTool(VersionIdentifier toolVersion, String... args) {
 
@@ -213,12 +210,11 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
     try (Stream<Path> stream = Files.list(path)) {
       Path[] subFiles = stream.toArray(Path[]::new);
       if (subFiles.length == 0) {
-        throw new CliException("The downloaded package for the tool " + this.tool
-            + " seems to be empty as you can check in the extracted folder " + path);
+        throw new CliException("The downloaded package for the tool " + this.tool + " seems to be empty as you can check in the extracted folder " + path);
       } else if (subFiles.length == 1) {
         String filename = subFiles[0].getFileName().toString();
-        if (!filename.equals(IdeContext.FOLDER_BIN) && !filename.equals(IdeContext.FOLDER_CONTENTS)
-            && !filename.endsWith(".app") && Files.isDirectory(subFiles[0])) {
+        if (!filename.equals(IdeContext.FOLDER_BIN) && !filename.equals(IdeContext.FOLDER_CONTENTS) && !filename.endsWith(".app")
+            && Files.isDirectory(subFiles[0])) {
           return getProperInstallationSubDirOf(subFiles[0]);
         }
       }
@@ -260,10 +256,6 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
         fileAccess.copy(appPath, tmpDir);
         pc.addArgs("detach", "-force", mountPath);
         pc.run();
-        // if [ -e "${target_dir}/Applications" ]
-        // then
-        // rm "${target_dir}/Applications"
-        // fi
       } else if ("msi".equals(extension)) {
         this.context.newProcess().executable("msiexec").addArgs("/a", file, "/qn", "TARGETDIR=" + tmpDir).run();
         // msiexec also creates a copy of the MSI
@@ -299,6 +291,13 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
     }
   }
 
+  /**
+   * Moves the extracted content to the final destination {@link Path}. May be overridden to customize the extraction
+   * process.
+   *
+   * @param from the source {@link Path} to move.
+   * @param to the target {@link Path} to move to.
+   */
   protected void moveAndProcessExtraction(Path from, Path to) {
 
     this.context.getFileAccess().move(from, to);
@@ -385,10 +384,8 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
       }
       return edition;
     } catch (IOException e) {
-      throw new IllegalStateException("Couldn't determine the edition of " + getName()
-          + " from the directory structure of its software path " + toolPath
-          + ", assuming the name of the parent directory of the real path of the software path to be the edition "
-          + "of the tool.", e);
+      throw new IllegalStateException("Couldn't determine the edition of " + getName() + " from the directory structure of its software path " + toolPath
+          + ", assuming the name of the parent directory of the real path of the software path to be the edition " + "of the tool.", e);
     }
 
   }
@@ -453,9 +450,8 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
     this.context.info("{}={} has been set in {}", name, version, settingsVariables.getSource());
     EnvironmentVariables declaringVariables = variables.findVariable(name);
     if ((declaringVariables != null) && (declaringVariables != settingsVariables)) {
-      this.context.warning(
-          "The variable {} is overridden in {}. Please remove the overridden declaration in order to make the change affect.",
-          name, declaringVariables.getSource());
+      this.context.warning("The variable {} is overridden in {}. Please remove the overridden declaration in order to make the change affect.", name,
+          declaringVariables.getSource());
     }
     if (hint) {
       this.context.info("To install that version call the following command:");
@@ -498,9 +494,8 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
     this.context.info("{}={} has been set in {}", name, edition, settingsVariables.getSource());
     EnvironmentVariables declaringVariables = variables.findVariable(name);
     if ((declaringVariables != null) && (declaringVariables != settingsVariables)) {
-      this.context.warning(
-          "The variable {} is overridden in {}. Please remove the overridden declaration in order to make the change affect.",
-          name, declaringVariables.getSource());
+      this.context.warning("The variable {} is overridden in {}. Please remove the overridden declaration in order to make the change affect.", name,
+          declaringVariables.getSource());
     }
     if (hint) {
       this.context.info("To install that edition call the following command:");
